handling some security issues